--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="string_unable_to_load_image">Unable to Load Image</string>
     <string name="string_reselect">Click on Image to Reselect</string>
     <string name="facebook_app_id">1712969235663640</string>
+    <string name="fb_login_protocol_scheme">fb1712969235663640</string>
 </resources>
